Issue #3323 icon alignment

--- a/css/ccap-principles-management.css
+++ b/css/ccap-principles-management.css
@@ -4244,7 +4244,7 @@ div.itemizedlist {
   width: 110px;
   height: 62px;
   position: absolute;
-  bottom: 0px;
+  bottom: -11.4px;
   right: 15px;
 }
 .chapter .note.managerial-leadership {
